[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Boton_X.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/izq.png" type="Texture" id=3]
[ext_resource path="res://assets/tuto.png" type="Texture" id=4]
[ext_resource path="res://assets/der.png" type="Texture" id=5]
[ext_resource path="res://BosqueSombra/Tutorial.gd" type="Script" id=6]
[ext_resource path="res://assets/volumne.png" type="Texture" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="fondo" type="Sprite" parent="."]
position = Vector2( 514.498, 301 )
scale = Vector2( 0.546576, 0.545788 )
texture = ExtResource( 4 )

[node name="salir" type="TextureButton" parent="."]
margin_left = 976.0
margin_top = 14.0
margin_right = 1014.0
margin_bottom = 49.0
texture_normal = ExtResource( 1 )
expand = true

[node name="titulo" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 270.0
margin_top = 128.0
margin_right = 528.0
margin_bottom = 159.0
rect_scale = Vector2( 2, 2 )
text = "Animal"
align = 1
valign = 1
autowrap = true

[node name="imagena" type="Sprite" parent="."]
position = Vector2( 523, 307 )
scale = Vector2( 3.10769, 3.10769 )
texture = ExtResource( 2 )

[node name="sonido" type="TextureButton" parent="."]
margin_left = 487.0
margin_top = 458.0
margin_right = 559.0
margin_bottom = 530.0
texture_normal = ExtResource( 7 )
expand = true

[node name="der" type="TextureButton" parent="."]
margin_left = 742.0
margin_top = 281.0
margin_right = 803.0
margin_bottom = 338.0
texture_normal = ExtResource( 5 )
expand = true

[node name="izq" type="TextureButton" parent="."]
margin_left = 241.0
margin_top = 280.0
margin_right = 304.0
margin_bottom = 339.0
texture_normal = ExtResource( 3 )
expand = true

[node name="sonidos" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="sonido" to="." method="_on_sonido_pressed"]
[connection signal="pressed" from="der" to="." method="_on_der_pressed"]
[connection signal="pressed" from="izq" to="." method="_on_izq_pressed"]
